# hip_examples

./: CMakeLists.txt  common.hpp  compile.module_split_02  device_func_01.cpp  device_func_02.cpp  device_func_03.cpp  device_func_03.hpp  kernel_01.cpp  kernel_04.cpp  kernel_04.hpp  kernel_05.hpp
cross_tu_call/: cross_tu_call.cpp
cross_tu_lds/: cross_tu_lds.cpp
cross_tu_resource/: CMakeLists.txt  cross_tu_resource.cpp
indirect_call/: CMakeLists.txt  indirect_call.cpp
kernarg/: CMakeLists.txt  kernarg.cpp
lds_size/: lds_size.hip
module_split/: CMakeLists.txt  device_func_01.cpp  device_func_01.hpp  device_func_02.hpp  device_func_03.cpp  kernel_01.hpp  kernel_02.cpp  kernel_02.hpp  kernel_03.cpp  kernel_03.hpp  kernel_04.cpp  kernel_04.hpp  kernel_05.cpp  kernel_06.cpp  kernel_06.hpp  kernel_07.cpp  kernel_07.hpp
module_split/cross_tu_call/: CMakeLists.txt
module_split/cross_tu_lds/: CMakeLists.txt
module_split/cross_tu_resource/: cross_tu_resource.cpp
module_split/indirect_call/: CMakeLists.txt
module_split/module_split_02/: CMakeLists.txt  call_kernel_01.hpp  call_kernel_02.hpp  call_kernel_07.cpp  call_kernel_07.hpp  module_split_02.cpp
module_split_01/: CMakeLists.txt  module_split_01.cpp
module_split_02/: call_kernel_01.cpp  call_kernel_02.cpp
rdc_non_rdc_link/: call_dummy_direct.cpp  cross_tu_call.cpp  non_rdc.cpp
xcd_id/: xcd_id.hip
